--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,20 +18,20 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   # untuk membuat google mapsnya
-  google_maps_flutter: ^2.0.3
+  google_maps_flutter: ^2.0.6
   # untuk mencari alamat lokasi kita
   geocoding: ^2.0.0
   # untuk mempermudah akses layanan lokasi
-  geolocator: ^7.0.1
+  geolocator: ^7.4.0
   # untuk membuat permission lokasi
-  permission_handler: ^6.1.1
+  permission_handler: ^8.1.4+2
 
 dev_dependencies:
   flutter_test:
